--- a/soal 1/nbproject/project.properties
+++ b/soal 1/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/soal_1___comment_.jar
+dist.jar=${dist.dir}/soal_1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/soal_1___comment_
+dist.jlink.output=${dist.jlink.dir}/soal_1
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=soal_1___comment_
+jlink.launcher.name=soal_1
 main.class=addnum.AddNum
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
